--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer utilities {
   @variants responsive {
     /* Hide scrollbar for Chrome, Safari and Opera */
@@ -17,99 +18,238 @@
   }
 }
 
-/* Themes */
-:root {
-  /* light */
-  /* --background: rgb(255, 255, 255);
-  --background-secondary: rgb(245, 247, 247);
-  --background-search: rgb(235, 240, 241);
-  --hover: rgb(245, 245, 245);
-  --hover-secondary: rgb(235, 238, 238);
-  --primary-dark: rgb(0, 0, 0);
-  --primary-light: rgb(66, 81, 94);  */
 
-  /* dark */
-  --background: rgb(0, 0, 0);
-  --background-secondary: rgb(22, 23, 26);
-  --background-search: rgb(24, 27, 29);
-  --hover: rgb(23, 23, 23);
-  --hover-secondary: rgb(27, 29, 32);
-  --primary-dark: rgb(255, 255, 255);
-  --primary-light: rgb(94, 99, 104);
+@layer base {
+  :root {
+    --cc-bg-primary: 0 0 0; /* Dark theme colors */
+    --cc-bg-secondary: 22 24 28;
+    --cc-bg-tertiary: 32 35 39;
+    --cc-text-primary: 231 233 234;
+    --cc-text-secondary: 112 118 123;
+    --cc-hover-primary: 24 24 25;
+    --cc-hover-secondary: 32 33 37;
+    --cc-backdrop: 36 45 55;
+    --cc-accent: 118 83 250;
+    --cc-accent-inv: 62 43 139;
+  }
 
-  --accent-dark: theme("colors.sky.500");
-  --accent-light: theme("colors.sky.300");
+  [data-theme='light'] {
+    --cc-bg-primary: 255 255 255; /* Light theme colors */
+    --cc-bg-secondary: 240 240 240;
+    --cc-bg-tertiary: 239 243 244;
+    --cc-text-primary: 14 20 25;
+    --cc-text-secondary: 83 100 113;
+    --cc-hover-primary: 230 230 230;
+    --cc-hover-secondary: 220 223 223;
+    --cc-backdrop: 163 163 163;
+  }
+
+  [data-theme='dark'] {
+    --cc-bg-primary: 0 0 0; /* Dark theme colors */
+    --cc-bg-secondary: 22 24 28;
+    --cc-bg-tertiary: 32 35 39;
+    --cc-text-primary: 231 233 234;
+    --cc-text-secondary: 112 118 123;
+    --cc-hover-primary: 24 24 25;
+    --cc-hover-secondary: 32 33 37;
+    --cc-backdrop: 36 45 55;
+  }
+
+  [data-theme='dim'] {
+    --cc-bg-primary: 21 32 43; /* Dim theme colors */
+    --cc-bg-secondary: 30 39 50;
+    --cc-bg-tertiary: 39 51 64;
+    --cc-text-primary: 247 249 249;
+    --cc-text-secondary: 139 152 165;
+    --cc-hover-primary: 50 58 63;
+    --cc-hover-secondary: 39 48 58;
+    --cc-backdrop: 50 65 81;
+  }
+
+  /* Accent Colors */
+  [data-accent='purple'] {
+    --cc-accent: 118 83 250;
+    --cc-accent-inv: 62 43 139;
+  }
+
+  [data-accent='blue'] {
+    --cc-accent: 45 155 240;
+    --cc-accent-inv: 20 82 131;
+  }
+
+  [data-accent='yellow'] {
+    --cc-accent: 252 212 0;
+    --cc-accent-inv: 137 113 2;
+  }
+
+  [data-accent='pink-red'] {
+    --cc-accent: 248 41 128;
+    --cc-accent-inv: 135 17 67;
+  }
+
+  [data-accent='orange'] {
+    --cc-accent: 249 121 2;
+    --cc-accent-inv: 136 63 3;
+  }
+
+  [data-accent='green'] {
+    --cc-accent: 46 186 124;
+    --cc-accent-inv: 20 100 65;
+  }
+
 }
 
-[data-theme="light"] {
-  --background: rgb(255, 255, 255);
-  --background-secondary: rgb(245, 247, 247);
-  --background-search: rgb(235, 240, 241);
 
-  --hover: rgb(245, 245, 245);
-  --hover-secondary: rgb(235, 238, 238);
 
-  /* text color */
-  --primary-dark: rgb(0, 0, 0);
-  /* small text */
-  --primary-light: rgb(66, 81, 94);
-}
 
-[data-theme="dim"] {
-  --background: rgb(17, 24, 32);
-  --background-secondary: rgb(23, 29, 38);
-  --background-search: rgb(29, 38, 49);
 
-  /* hover */
-  --hover: rgb(21, 29, 38);
-  --hover-secondary: rgb(28, 35, 42);
 
-  /* text color */
-  --primary-dark: rgb(255, 255, 255);
-  /* small text */
-  --primary-light: rgb(121, 133, 148);
-}
 
-[data-theme="dark"] {
-  --background: rgb(0, 0, 0);
-  --background-secondary: rgb(22, 23, 26);
-  --background-search: rgb(24, 27, 29);
-  --hover: rgb(23, 23, 23);
-  --hover-secondary: rgb(27, 29, 32);
-  --primary-dark: rgb(255, 255, 255);
-  --primary-light: rgb(94, 99, 104);
-}
 
-/* Accent colors */
-[data-accent="blue"] {
-  --accent-dark: theme("colors.sky.500");
-  --accent-light: theme("colors.sky.300");
-}
 
-[data-accent="yellow"] {
-  --accent-dark: theme("colors.yellow.500");
-  --accent-light: theme("colors.yellow.200");
-}
 
-[data-accent="pink"] {
-  --accent-dark: theme("colors.pink.600");
-  --accent-light: theme("colors.pink.300");
-}
 
-[data-accent="purple"] {
-  --accent-dark: theme("colors.violet.600");
-  --accent-light: theme("colors.violet.200");
-}
 
-[data-accent="orange"] {
-  --accent-dark: theme("colors.orange.500");
-  --accent-light: theme("colors.orange.300");
-}
 
-[data-accent="green"] {
-  --accent-dark: theme("colors.emerald.500");
-  --accent-light: theme("colors.emerald.200");
-}
+
+
+
+
+
+
+
+
+
+/*@layer base {*/
+/*  :root {*/
+/*    --background: rgb(0, 0, 0);*/
+/*    --background-secondary: rgb(22, 23, 26);*/
+/*    --background-search: rgb(24, 27, 29);*/
+/*    --hover: rgb(23, 23, 23);*/
+/*    --hover-secondary: rgb(27, 29, 32);*/
+/*    --primary-dark: rgb(255, 255, 255);*/
+/*    --primary-light: rgb(94, 99, 104);*/
+/*    --backdrop: rgb(27, 34, 39);*/
+
+/*    --accent-dark: theme("colors.sky.500");*/
+/*    --accent-light: theme("colors.sky.300");*/
+/*  }*/
+/*}*/
+
+/*@layer base {*/
+/*  :root {*/
+/*    --color-bg-primary: 0 0 0;*/
+/*    --color-bg-secondary: 22 23 26;*/
+/*    --color-text-primary: 255 255 255;*/
+/*    --color-text-secondary: 94 99 104*/
+
+/*    !*--background-search: 235 240 241;*!*/
+/*    !*--hover: 245 245 245;*!*/
+/*    !*--hover-secondary: 235 238 238;*!*/
+/*  }*/
+/*}*/
+
+
+
+
+/*!* Themes *!*/
+/*:root {*/
+/*  !* light *!*/
+/*  --background: rgb(255, 255, 255);*/
+/*  --background-secondary: rgb(245, 247, 247);*/
+/*  --background-search: rgb(235, 240, 241);*/
+/*  --hover: rgb(245, 245, 245);*/
+/*  --hover-secondary: rgb(235, 238, 238);*/
+/*  --primary-dark: rgb(0, 0, 0);*/
+/*  --primary-light: rgb(66, 81, 94);*/
+
+/*  !* dark *!*/
+/*  !*--background: rgb(0, 0, 0);*!*/
+/*  !*--background-secondary: rgb(22, 23, 26);*!*/
+/*  !*--background-search: rgb(24, 27, 29);*!*/
+/*  !*--hover: rgb(23, 23, 23);*!*/
+/*  !*--hover-secondary: rgb(27, 29, 32);*!*/
+/*  !*--primary-dark: rgb(255, 255, 255);*!*/
+/*  !*--primary-light: rgb(94, 99, 104);*!*/
+/*  !*--backdrop: rgb(27, 34, 39);*!*/
+
+/*  --accent-dark: theme("colors.sky.500");*/
+/*  --accent-light: theme("colors.sky.300");*/
+/*}*/
+
+/*[data-theme="light"] {*/
+/*  --background: rgb(255, 255, 255);*/
+/*  --background-secondary: rgb(245, 247, 247);*/
+/*  --background-search: rgb(235, 240, 241);*/
+
+/*  --backdrop: rgb(135, 135, 135);*/
+
+/*  --hover: rgb(245, 245, 245);*/
+/*  --hover-secondary: rgb(235, 238, 238);*/
+
+/*  !* text color *!*/
+/*  --primary-dark: rgb(0, 0, 0);*/
+/*  !* small text *!*/
+/*  --primary-light: rgb(66, 81, 94);*/
+/*}*/
+
+/*[data-theme="dim"] {*/
+/*  --background: rgb(21, 32, 43);*/
+/*  --background-secondary: rgb(30, 39, 50);*/
+/*  --background-search: rgb(29, 38, 49);*/
+
+/*  --backdrop: rgb(27, 34, 39);*/
+
+/*  !* hover *!*/
+/*  --hover: rgb(44, 55, 64);*/
+/*  --hover-secondary: rgb(28, 39, 54);*/
+
+/*  !* text color *!*/
+/*  --primary-dark: rgb(255, 255, 255);*/
+/*  --primary-light: rgb(121, 133, 148);*/
+/*}*/
+
+/*[data-theme="dark"] {*/
+/*  --background: rgb(0, 0, 0);*/
+/*  --background-secondary: rgb(22, 23, 26);*/
+/*  --background-search: rgb(24, 27, 29);*/
+/*  --backdrop: rgb(27, 34, 39);*/
+/*  --hover: rgb(23, 23, 23);*/
+/*  --hover-secondary: rgb(27, 29, 32);*/
+/*  --primary-dark: rgb(255, 255, 255);*/
+/*  --primary-light: rgb(94, 99, 104);*/
+/*}*/
+
+/*!* Accent colors *!*/
+/*[data-accent="blue"] {*/
+/*  --accent-dark: theme("colors.sky.500");*/
+/*  --accent-light: theme("colors.sky.300");*/
+/*}*/
+
+/*[data-accent="yellow"] {*/
+/*  --accent-dark: theme("colors.yellow.500");*/
+/*  --accent-light: theme("colors.yellow.200");*/
+/*}*/
+
+/*[data-accent="pink"] {*/
+/*  --accent-dark: theme("colors.pink.600");*/
+/*  --accent-light: theme("colors.pink.300");*/
+/*}*/
+
+/*[data-accent="purple"] {*/
+/*  --accent-dark: theme("colors.violet.600");*/
+/*  --accent-light: theme("colors.violet.200");*/
+/*}*/
+
+/*[data-accent="orange"] {*/
+/*  --accent-dark: theme("colors.orange.500");*/
+/*  --accent-light: theme("colors.orange.300");*/
+/*}*/
+
+/*[data-accent="green"] {*/
+/*  --accent-dark: theme("colors.emerald.500");*/
+/*  --accent-light: theme("colors.emerald.200");*/
+/*}*/
 
 /* Styles */
 
