--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,9 +63,16 @@
     --color-blue: 29 155 240;
     --color-green: 0 186 124;
     --color-red: 249 24 128;
+    --color-purple: 120 86 255;
+    --color-yellow: 255 212 0;
+    --color-orange: 255 122 0;
 
     --color-accent: 29 155 240;
     --color-accent-hover: 26 140 216;
+
+    --color-bg-default: 0 0 0;
+    --color-bg-dim: 21 32 43;
+    --color-bg-light: 255 255 255;
   }
 
   [data-theme="dark"] {
